# neural-network-volatility-forecaster

./: .gitignore  README.md  main.py  pyproject.toml
src/: baselines.py  data.py  evaluate.py  features.py  model.py  train.py
tests/: test_data.py  test_features.py
